Add Allais data preparation

--- a/allais_prepare_data.ipynb
+++ b/allais_prepare_data.ipynb
@@ -5,26 +5,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prepare Ellsberg data\n",
+    "# Prepare Allais data\n",
     "\n",
-    "This notebook generates 'data_ellsberg.csv'. It processes the raw data and provides a standardised output:\n",
+    "This notebook generates 'data_allais.csv'. It processes the raw data and provides a standardised output:\n",
     "- Cleans up the results of the emotion elicitation questionnaire\n",
     "- Calculates a single locus score for each participant - See [original paper](https://psycnet.apa.org/record/2011-19211-001), page 11.\n",
     "- Calculates a Big 5 score (openness to experience, conscientiousness, extraversion, agreeableness, and emotional stability) for each participant - See [original paper](https://www.sciencedirect.com/science/article/abs/pii/S0092656603000461), appendix A.\n",
     "\n",
     "Notes:\n",
-    "- The \"primary ID\" for our dataset throughout the entire process stays the index of the entry in `raw_data_ellsberg.csv`\n",
+    "- The \"primary ID\" for our dataset throughout the entire process stays the index of the entry in `raw_data_allais.csv`\n",
     "\n",
     "Exact cleaning steps:\n",
-    "1. Remove duplicate column headers\n",
-    "2. Remove exactly 3 participants with low progress (not enough data)\n",
+    "1. Remove duplicate column headers \n",
+    "2. Remove exactly 4 participants with low progress (not enough data)\n",
     "3. Rename generic column names into useable ones\n",
-    "4. Remove participant with multiple records (there should be exactly 1 participant to remove)\n",
-    "5. Join against demographic data\n",
+    "4. Remove participant with multiple records (there should be no such participants)\n",
+    "5. Join against demographic data (drop 5 participants without demographic information)\n",
     "6. Adjust game choice values & data types\n",
     "7. Adjust certainty values & data types \n",
     "8. Adjust game emotions values & data types\n",
-    "9. Adjust TIPI answers & data types\n",
+    "9. Adjust TIPI answer values & data types\n",
     "10. Calculate TIPI values\n",
     "11. Calculate locus values\n",
     "12. Add a column saying if the participant displays ambiguity aversion (DAA)\n",
@@ -40,11 +40,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "ellsberg = 'data/raw_data_ellsberg.csv'\n",
-    "demographic = 'data/demographic_ellsberg.csv'\n",
-    "output = 'data/data_ellsberg.csv'\n",
+    "allais = 'data/raw_data_allais.csv'\n",
+    "demographic = f'data/demographic_allais.csv'\n",
+    "output = f'data/data_allais.csv'\n",
     "\n",
-    "df = pd.read_csv(ellsberg)\n",
+    "df = pd.read_csv(allais)\n",
     "demographic_df = pd.read_csv(demographic)"
    ]
   },
@@ -98,76 +98,76 @@
    "outputs": [],
    "source": [
     "mapping = {\n",
-    "    \"Q78\": \"participant_id\", \n",
+    "    \"Q89\": \"participant_id\", \n",
     "\n",
-    "    \"Q7\": \"ChoiceGame1\",\n",
-    "    \"Q72\": \"CertaintyGame1\",\n",
-    "    \"Q57_1\": \"Hopeful1A\",\n",
-    "    \"Q58_1\": \"Curiosity1A\",\n",
-    "    \"Q59_1\": \"Enlightenment1A\",\n",
-    "    \"Q54_1\": \"Thrilled1A\",\n",
-    "    \"Q61_1\": \"Anticipatory1A\",\n",
-    "    \"Q56_1\": \"Satisfied1A\",\n",
-    "    \"Q63_1\": \"Hopeful1B\",\n",
-    "    \"Q64_1\": \"Curiosity1B\",\n",
-    "    \"Q65_1\": \"Enlightenment1B\",\n",
-    "    \"Q66_1\": \"Thrilled1B\",\n",
-    "    \"Q67_1\": \"Anticipatory1B\",\n",
-    "    \"Q68_1\": \"Satisfied1B\",\n",
-    "    \"Q13\": \"ChoiceGame2\",\n",
-    "    \"Q14\": \"CertaintyGame2\",\n",
-    "    \"Q15_1\": \"Hopeful2A\",\n",
-    "    \"Q52_1\": \"Curiosity2A\",\n",
-    "    \"Q53_1\": \"Enlightenment2A\",\n",
-    "    \"Q60_1\": \"Thrilled2A\",\n",
-    "    \"Q55_1\": \"Anticipatory2A\",\n",
-    "    \"Q62_1\": \"Satisfied2A\",\n",
-    "    \"Q69_1\": \"Hopeful2B\",\n",
-    "    \"Q70_1\": \"Curiosity2B\",\n",
-    "    \"Q71_1\": \"Enlightenment2B\",\n",
-    "    \"Q72_1\": \"Thrilled2B\",\n",
-    "    \"Q73_1\": \"Anticipatory2B\",\n",
-    "    \"Q74_1\": \"Satisfied2B\",\n",
-    "    \"Q17_1\": \"TipiEnthusiastic\",\n",
-    "    \"Q17_2\": \"TipiQuiet\",\n",
-    "    \"Q17_3\": \"TipiWarm\",\n",
-    "    \"Q17_4\": \"TipiQuarrelsome\",\n",
-    "    \"Q17_5\": \"TipiDisciplined\",\n",
-    "    \"Q17_6\": \"TipiCareless\",\n",
-    "    \"Q17_7\": \"TipiStable\",\n",
-    "    \"Q17_8\": \"TipiAnxious\",\n",
-    "    \"Q17_9\": \"TipiComplex\",\n",
-    "    \"Q17_10\": \"TipiUncreative\",\n",
+    "    \"Q5\": \"ChoiceGame1\",\n",
+    "    \"Q51\": \"CertaintyGame1\",\n",
+    "    \"Q6_1\": \"Hopeful1A\",\n",
+    "    \"Q55_1\": \"Curiosity1A\",\n",
+    "    \"Q56_1\": \"Enlightenment1A\",\n",
+    "    \"Q57_1\": \"Thrilled1A\",\n",
+    "    \"Q58_1\": \"Anticipatory1A\",\n",
+    "    \"Q59_1\": \"Satisfied1A\",\n",
+    "    \"Q60_1\": \"Hopeful1B\",\n",
+    "    \"Q61_1\": \"Curiosity1B\",\n",
+    "    \"Q62_1\": \"Enlightenment1B\",\n",
+    "    \"Q63_1\": \"Thrilled1B\",\n",
+    "    \"Q64_1\": \"Anticipatory1B\",\n",
+    "    \"Q65_1\": \"Satisfied1B\",\n",
+    "    \"Q82\": \"ChoiceGame2\",\n",
+    "    \"Q54\": \"CertaintyGame2\",\n",
+    "    \"Q66_1\": \"Hopeful2A\",\n",
+    "    \"Q67_1\": \"Curiosity2A\",\n",
+    "    \"Q68_1\": \"Enlightenment2A\",\n",
+    "    \"Q69_1\": \"Thrilled2A\",\n",
+    "    \"Q70_1\": \"Anticipatory2A\",\n",
+    "    \"Q71_1\": \"Satisfied2A\",\n",
+    "    \"Q72_1\": \"Hopeful2B\",\n",
+    "    \"Q73_1\": \"Curiosity2B\",\n",
+    "    \"Q74_1\": \"Enlightenment2B\",\n",
+    "    \"Q75_1\": \"Thrilled2B\",\n",
+    "    \"Q76_1\": \"Anticipatory2B\",\n",
+    "    \"Q77_1\": \"Satisfied2B\",\n",
+    "    \"Q16_1\": \"TipiEnthusiastic\",\n",
+    "    \"Q16_2\": \"TipiQuiet\",\n",
+    "    \"Q16_3\": \"TipiWarm\",\n",
+    "    \"Q16_4\": \"TipiQuarrelsome\",\n",
+    "    \"Q16_5\": \"TipiDisciplined\",\n",
+    "    \"Q16_6\": \"TipiCareless\",\n",
+    "    \"Q16_7\": \"TipiStable\",\n",
+    "    \"Q16_8\": \"TipiAnxious\",\n",
+    "    \"Q16_9\": \"TipiComplex\",\n",
+    "    \"Q16_10\": \"TipiUncreative\",\n",
     "\n",
-    "    \"Q15\": \"Locus1\",\n",
-    "    \"Q17\": \"Locus2\",\n",
-    "    \"Q19\": \"Locus3\",\n",
-    "    \"Q21\": \"Locus4\",\n",
+    "    \"Q18\": \"Locus1\",\n",
+    "    \"Q19\": \"Locus2\",\n",
+    "    \"Q21\": \"Locus3\",\n",
+    "    \"Q22\": \"Locus4\",\n",
     "    \"Q23\": \"Locus5\",\n",
-    "    \"Q25\": \"Locus6\",\n",
-    "    \"Q27\": \"Locus7\",\n",
-    "    \"Q29\": \"Locus8\",\n",
-    "    \"Q31\": \"Locus9\",\n",
-    "    \"Q33\": \"Locus10\",\n",
-    "    \"Q35\": \"Locus11\",\n",
-    "    \"Q37\": \"Locus12\",\n",
-    "    \"Q39\": \"Locus13\",\n",
-    "    \"Q41\": \"Locus14\",\n",
-    "    \"Q43\": \"Locus15\",\n",
-    "    \"Q45\": \"Locus16\",\n",
-    "    \"Q47\": \"Locus17\",\n",
-    "    \"Q49\": \"Locus18\",\n",
-    "    \"Q51\": \"Locus19\",\n",
-    "    \"Q53\": \"Locus20\",\n",
-    "    \"Q55\": \"Locus21\",\n",
-    "    \"Q57\": \"Locus22\",\n",
-    "    \"Q59\": \"Locus23\",\n",
-    "    \"Q61\": \"Locus24\",\n",
-    "    \"Q63\": \"Locus25\",\n",
-    "    \"Q65\": \"Locus26\",\n",
-    "    \"Q67\": \"Locus27\",\n",
-    "    \"Q69\": \"Locus28\",\n",
-    "    \"Q71\": \"Locus29\",\n",
+    "    \"Q24\": \"Locus6\",\n",
+    "    \"Q25\": \"Locus7\",\n",
+    "    \"Q26\": \"Locus8\",\n",
+    "    \"Q27\": \"Locus9\",\n",
+    "    \"Q28\": \"Locus10\",\n",
+    "    \"Q29\": \"Locus11\",\n",
+    "    \"Q30\": \"Locus12\",\n",
+    "    \"Q31\": \"Locus13\",\n",
+    "    \"Q32\": \"Locus14\",\n",
+    "    \"Q33\": \"Locus15\",\n",
+    "    \"Q34\": \"Locus16\",\n",
+    "    \"Q35\": \"Locus17\",\n",
+    "    \"Q36\": \"Locus18\",\n",
+    "    \"Q37\": \"Locus19\",\n",
+    "    \"Q38\": \"Locus20\",\n",
+    "    \"Q39\": \"Locus21\",\n",
+    "    \"Q40\": \"Locus22\",\n",
+    "    \"Q41\": \"Locus23\",\n",
+    "    \"Q42\": \"Locus24\",\n",
+    "    \"Q43\": \"Locus25\",\n",
+    "    \"Q44\": \"Locus26\",\n",
+    "    \"Q45\": \"Locus27\",\n",
+    "    \"Q46\": \"Locus28\",\n",
+    "    \"Q47\": \"Locus29\",\n",
     "}\n",
     "\n",
     "count = sum([1 for k in mapping if k in df])\n",
@@ -252,7 +252,7 @@
    "source": [
     "choice_cols = ['ChoiceGame1', 'ChoiceGame2']\n",
     "for col in choice_cols:\n",
-    "    df[col] = np.where(df[col] == 'Lottery A', 1, 2)\n",
+    "    df[col] = np.where(df[col] == '1', 1, 2)\n",
     "\n",
     "choice_dtype = {c: 'int32' for c in choice_cols}\n",
     "df = df.astype(choice_dtype)"
@@ -264,7 +264,7 @@
    "source": [
     "#### Step 7: Adjust game certainty values & data types\n",
     "\n",
-    "Remove text values from game certainty columns, and cast to numeric types"
+    "Make sure certainty values are numeric integrals, 1 (very uncertain) - 5 (very certain)"
    ]
   },
   {
@@ -273,23 +273,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Canonicalize values for game certainty\n",
-    "\n",
     "certainty_cols = ['CertaintyGame1', 'CertaintyGame2']\n",
     "for col in certainty_cols:\n",
-    "    df = df.replace({col: {'Very Uncertain\\n1': 1, 'Very Certain\\n5': 5}})\n",
+    "    print(df[col].value_counts())\n",
     "\n",
-    "certainty_dtype = {c: 'int32' for c in certainty_cols}\n",
-    "df = df.astype(certainty_dtype)"
+    "df = df.astype({c: 'int32' for c in certainty_cols})"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 8: Adjust game emotion values & data types\n",
+    "#### Step 8: Adjust game emotions values & data types\n",
     "\n",
-    "For every emotion (hopeful, curiosity, enlightment, thrilled, anticipatory, satisfied), replace categorical values (enums) with numeric ones (1-4)"
+    "For every emotion (hopeful, curiosity, enlightment, thrilled, anticipatory, satisfied), adjust scale (1, 6, 7, 8) to 1-4."
    ]
   },
   {
@@ -304,33 +301,27 @@
     "thrilled_columns = [ 'Thrilled1A', 'Thrilled1B', 'Thrilled2A', 'Thrilled2B' ]\n",
     "anticipatory_columns = [ 'Anticipatory1A', 'Anticipatory1B', 'Anticipatory2A', 'Anticipatory2B' ]\n",
     "satisfied_columns = [ 'Satisfied1A', 'Satisfied1B', 'Satisfied2A', 'Satisfied2B' ]\n",
+    "all_columns = hopeful_columns + curiosity_columns + enlightenment_columns + \\\n",
+    "    thrilled_columns + anticipatory_columns + satisfied_columns\n",
     "\n",
-    "hopeful_values = {'Worry': 1, 'Discomfort': 2, 'Comfort': 3, 'Hopeful': 4}\n",
-    "curiosity_values = {'Boredom': 1, 'Indifference': 2, 'Interest': 3, 'Curiosity': 4}\n",
-    "enlightenment_values = {'Puzzlement': 1, 'Confusion': 2, 'Insight': 3, 'Enlightenment': 4}\n",
-    "thrilled_values = {'Disappointed': 1, 'Dissatisfied': 2, 'Satisfied': 3, 'Thrilled': 4}\n",
-    "anticipatory_values = {'Dread': 1, 'Apprehension': 2, 'Calm': 3, 'Anticipatory': 4}\n",
-    "satisfied_values = {'Embarrassed': 1, 'Self-conscious': 2, 'Pleased': 3, 'Satisfied': 4}\n",
+    "value_mapping = {\n",
+    "    '1': 1,\n",
+    "    '6': 2,\n",
+    "    '7': 3,\n",
+    "    '8': 4,\n",
+    "}\n",
     "\n",
-    "mapping = [\n",
-    "    (hopeful_columns, hopeful_values),\n",
-    "    (curiosity_columns, curiosity_values),\n",
-    "    (enlightenment_columns, enlightenment_values),\n",
-    "    (thrilled_columns, thrilled_values),\n",
-    "    (anticipatory_columns, anticipatory_values),\n",
-    "    (satisfied_columns, satisfied_values)\n",
-    "]\n",
+    "for col in all_columns:\n",
+    "    df[col] = df[col].replace(value_mapping)\n",
     "\n",
-    "for columns, values in mapping:\n",
-    "    numeric_mapping = {column: values for column in columns}\n",
-    "    df = df.replace(numeric_mapping)"
+    "df = df.astype({c: 'int32' for c in all_columns})"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 9: Adjust TIPI answers & data types\n",
+    "#### Step 9: Adjust TIPI answer values & data types\n",
     "\n",
     "Remove textual values and cast to numeric types"
    ]
@@ -354,13 +345,8 @@
     "    \"TipiUncreative\",\n",
     "]\n",
     "\n",
-    "# Remove strings for '1' and '7' values\n",
-    "for col in tipi_cols:\n",
-    "    df = df.replace({col: {'1 strongly\\ndisagree': 1, '7 strongly\\nagree': 7}})\n",
-    "\n",
     "# Update tipi columns to be integers\n",
-    "tipi_dtype_mapping = {col: 'int32' for col in tipi_cols}\n",
-    "df = df.astype(tipi_dtype_mapping)\n"
+    "df = df.astype({col: 'int32' for col in tipi_cols})"
    ]
   },
   {
@@ -436,84 +422,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This mapping helps convert textual values to option they chose, i.e. a numeric 1 or 2\n",
-    "# Questions that are not scored simply don't appear here\n",
-    "locus_choice_mapping = {\n",
-    "    '1': 'Children',\n",
-    "    '2': 'Many',\n",
-    "    '3': 'One',\n",
-    "    '4': 'In',\n",
-    "    '5': 'The',\n",
-    "    '6': 'Without',\n",
-    "    '7': 'No',\n",
-    "    '8': 'Heredity',\n",
-    "    '9': 'I',\n",
-    "    '10': 'In',\n",
-    "    '11': 'Becoming',\n",
-    "    '12': 'The',\n",
-    "    '13': 'When',\n",
-    "    '14': 'There',\n",
-    "    '15': 'In',\n",
-    "    '16': 'Who',\n",
-    "    '17': 'As',\n",
-    "    '18': 'Most',\n",
-    "    '19': 'One',\n",
-    "    '20': 'It',\n",
-    "    '21': 'In',\n",
-    "    '22': 'With',\n",
-    "    '23': 'Sometimes',\n",
-    "    '24': 'A good leader expects',\n",
-    "    '25': 'Many',\n",
-    "    '26': 'People',\n",
-    "    '27': 'There',\n",
-    "    '28': 'What',\n",
-    "    '29': 'Most',\n",
-    "}\n",
+    "# Raw values correlate with the option they chose, i.e. a numeric 1 or 2\n",
     "\n",
     "# This mapping helps convert participant answers to scoring, i.e. a numeric 1 if they are should get a point, otherwise 0\n",
-    "# Questions that are not scored are compared against '$', which will never appear, so the score will always be 0\n",
+    "# Questions that are not scored are compared against '-1', which will never appear, so the score will always be 0\n",
     "locus_score_mapping = {\n",
-    "    '1': '$',\n",
-    "    '2': 'Many',\n",
-    "    '3': 'There',\n",
-    "    '4': 'Unfortunately',\n",
-    "    '5': 'Most',\n",
-    "    '6': 'Without',\n",
-    "    '7': 'No',\n",
-    "    '8': '$',\n",
-    "    '9': 'I',\n",
-    "    '10': 'Many',\n",
-    "    '11': 'Getting',\n",
-    "    '12': 'This',\n",
-    "    '13': 'It',\n",
-    "    '14': '$',\n",
-    "    '15': 'Many',\n",
-    "    '16': 'Who',\n",
-    "    '17': 'As',\n",
-    "    '18': 'Most',\n",
-    "    '19': '$',\n",
-    "    '20': 'It',\n",
-    "    '21': 'In',\n",
-    "    '22': 'It',\n",
-    "    '23': 'Sometimes',\n",
-    "    '24': '$',\n",
-    "    '25': 'Many',\n",
-    "    '26': 'There',\n",
-    "    '27': '$',\n",
-    "    '28': 'Sometimes',\n",
-    "    '29': 'Most',\n",
+    "    '1': '-1',\n",
+    "    '2': '1',\n",
+    "    '3': '2',\n",
+    "    '4': '2',\n",
+    "    '5': '2',\n",
+    "    '6': '1',\n",
+    "    '7': '1',\n",
+    "    '8': '-1',\n",
+    "    '9': '1',\n",
+    "    '10': '2',\n",
+    "    '11': '2',\n",
+    "    '12': '2',\n",
+    "    '13': '2',\n",
+    "    '14': '-1',\n",
+    "    '15': '2',\n",
+    "    '16': '1',\n",
+    "    '17': '1',\n",
+    "    '18': '1',\n",
+    "    '19': '-1',\n",
+    "    '20': '1',\n",
+    "    '21': '1',\n",
+    "    '22': '2',\n",
+    "    '23': '1',\n",
+    "    '24': '-1',\n",
+    "    '25': '1',\n",
+    "    '26': '2',\n",
+    "    '27': '-1',\n",
+    "    '28': '2',\n",
+    "    '29': '1',\n",
     "}\n",
     "\n",
     "# This conversion has to come first, as the next one overrides the original textual answers\n",
     "for k, v in locus_score_mapping.items():\n",
     "    locus_k = 'Locus' + k\n",
     "    score_k = 'LocusScore' + k\n",
-    "    df[score_k] = np.where(df[locus_k].str.startswith(v, na=False), 1, 0)\n",
-    "\n",
-    "# Override the textual answers with numerical values\n",
-    "for k, v in locus_choice_mapping.items():\n",
-    "    locus_k = 'Locus' + k\n",
-    "    df[locus_k] = np.where(df[locus_k].str.startswith(v, na=False), 1, 2)\n",
+    "    df[score_k] = np.where(df[locus_k] == v, 1, 0)\n",
     "\n",
     "# Calculate a single locus score column\n",
     "score_keys = ['LocusScore' + dk for dk in locus_score_mapping]\n",
@@ -522,14 +471,18 @@
     "# Draw raw score columns\n",
     "df = df.drop(score_keys, axis=1)\n",
     "\n",
-    "df['Locus'].value_counts()\n"
+    "df['Locus'].value_counts()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 12: Add a column saying if the participant displays ambiguity aversion (DAA)"
+    "#### Step 12: Add a column saying if the participant displays ambiguity aversion (DAA)\n",
+    "\n",
+    "Allais paradox deals with the interesting observation that when presented with game 1 most people would choose gamble A,\n",
+    "but when presented with game 2 most people would choose gamble B.\n",
+    "This phenomenon is familiar as the \"certainty effect\" and it is paradoxical."
    ]
   },
   {
