--- a/daa_matrix.ipynb
+++ b/daa_matrix.ipynb
@@ -7,7 +7,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('data/data_ellsberg.csv')"
+    "\n",
+    "#paradox = 'ellsberg'\n",
+    "paradox = 'allais'\n",
+    "df = pd.read_csv(f'data/data_{paradox}.csv')"
    ]
   },
   {
