--- a/daa_statistics.ipynb
+++ b/daa_statistics.ipynb
@@ -14,7 +14,9 @@
     "\n",
     "from data_common import EMOTIONS_FEATURES, PERSONALITY_FEATURES, DAA, SEX\n",
     "\n",
-    "df = pd.read_csv('data/data_ellsberg.csv')"
+    "#paradox = 'ellsberg'\n",
+    "paradox = 'allais'\n",
+    "df = pd.read_csv(f'data/data_{paradox}.csv')"
    ]
   },
   {
@@ -103,28 +105,37 @@
     "from sklearn.model_selection import train_test_split\n",
     "from statistics import mean\n",
     "\n",
-    "features = EMOTIONS_FEATURES\n",
-    "X = df[features]\n",
-    "y = df[DAA]\n",
+    "def logistic_regression(features):\n",
+    "    X = df[features]\n",
+    "    y = df[DAA]\n",
     "\n",
-    "scores = []\n",
-    "coefs = np.ndarray(shape=(0,X.shape[1]), dtype=float)\n",
-    "for _ in range(100):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=None, test_size=0.2)\n",
-    "    model = LogisticRegression(solver='liblinear').fit(X_train, y_train)\n",
-    "    pred = model.predict(X_test)\n",
-    "    score = model.score(X_test, y_test)\n",
-    "    scores.append(score)\n",
-    "    coefs = np.vstack([coefs, model.coef_])\n",
+    "    scores = []\n",
+    "    coefs = np.ndarray(shape=(0,X.shape[1]), dtype=float)\n",
+    "    for _ in range(100):\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=None, test_size=0.2)\n",
+    "        model = LogisticRegression(solver='liblinear').fit(X_train, y_train)\n",
+    "        pred = model.predict(X_test)\n",
+    "        score = model.score(X_test, y_test)\n",
+    "        scores.append(score)\n",
+    "        coefs = np.vstack([coefs, model.coef_])\n",
     "\n",
-    "    #print(\"test\", y_test.to_list())\n",
-    "    #print(\"pred\", pred.tolist())\n",
-    "    #print(\"score\", score)\n",
-    "    #print(\"coef\", model.coef_)\n",
+    "        #print(\"test\", y_test.to_list())\n",
+    "        #print(\"pred\", pred.tolist())\n",
+    "        #print(\"score\", score)\n",
+    "        #print(\"coef\", model.coef_)\n",
     "\n",
-    "print(mean(scores))\n",
-    "for f, c in zip(features, coefs.mean(axis=0)):\n",
-    "    print(f'{f:20} = {c:10.3f}')"
+    "    print(mean(scores))\n",
+    "    for f, c in zip(features, coefs.mean(axis=0)):\n",
+    "        print(f'{f:20} = {c:10.3f}')\n",
+    "\n",
+    "features_map = {\n",
+    "    'Personality': PERSONALITY_FEATURES,\n",
+    "    'Emotions': EMOTIONS_FEATURES,\n",
+    "}\n",
+    "\n",
+    "for name, features in features_map.items():\n",
+    "    print(f'--------------- {name} ---------------')\n",
+    "    logistic_regression(features)"
    ]
   }
  ],
