Adjust kmeans by emotion to Allais

--- a/kmeans_emotion_only.ipynb
+++ b/kmeans_emotion_only.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "from data_common import EMOTIONS_FEATURES, EMOTIONS_LABELS, DAA, CLUSTER\n",
     "\n",
-    "df = pd.read_csv('data/data_ellsberg.csv')\n",
+    "#paradox = 'ellsberg'\n",
+    "paradox = 'allais'\n",
+    "df = pd.read_csv(f'data/data_{paradox}.csv')\n",
     "df = df[EMOTIONS_FEATURES + [DAA]]"
    ]
   },
@@ -45,7 +47,7 @@
    "source": [
     "import numpy as np\n",
     "sils = np.ndarray(shape=(0,len(K_range)), dtype=float)\n",
-    "for i in range(100):\n",
+    "for i in range(30):\n",
     "    sils = np.vstack([sils, [KMeans(df, k, features=EMOTIONS_FEATURES, random_state=None).silhouette for k in K_range]])\n",
     "sils = sils.mean(axis=0)\n",
     "plt.plot(K_range, sils, 'bx-')\n",
