Adjust kmeans by personality and emotions to Allais

--- a/kmeans_personality_and_emotion.ipynb
+++ b/kmeans_personality_and_emotion.ipynb
@@ -17,7 +17,10 @@
     "\n",
     "from data_common import PERSONALITY_FEATURES, PERSONALITY_FEATURES_NO_LOCUS, EMOTIONS_FEATURES, EMOTIONS_LABELS, DAA, CLUSTER\n",
     "\n",
-    "df = pd.read_csv('data/data_ellsberg.csv')\n",
+    "#paradox = 'ellsberg'\n",
+    "paradox = 'allais'\n",
+    "df = pd.read_csv(f'data/data_{paradox}.csv')\n",
+    "\n",
     "df = df[PERSONALITY_FEATURES + EMOTIONS_FEATURES + [DAA]]"
    ]
   },
@@ -58,22 +61,11 @@
    "source": [
     "K = 2\n",
     "km = KMeans(df, K, features=PERSONALITY_FEATURES)\n",
-    "print(PERSONALITY_FEATURES)\n",
+    "for cf, c0, c1 in zip(PERSONALITY_FEATURES, km.centroids[0], km.centroids[1]):\n",
+    "    print(f'{cf:19} {c0:10.3} {c1:10.3}')\n",
+    "print()\n",
+    "\n",
     "print_per_game_kmeans(km, [PERSONALITY_FEATURES_NO_LOCUS], ylim=None, plot_graph=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# K = 2\n",
-    "# km = KMeans(df, K, features=PERSONALITY_FEATURES)\n",
-    "# len = len(PERSONALITY_FEATURES_NO_LOCUS)\n",
-    "# plt.plot(PERSONALITY_FEATURES_NO_LOCUS, km.centroids[0][:len], label=f'Cluster #0')\n",
-    "# plt.plot(PERSONALITY_FEATURES_NO_LOCUS, km.centroids[1][:len], label=f'Cluster #1')\n",
-    "# plt.show()"
    ]
   },
   {
