Adjust gini decision tree to Allais

--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -11,7 +11,9 @@
     "from sklearn.tree import export_graphviz, DecisionTreeClassifier\n",
     "from subprocess import check_call\n",
     "\n",
-    "df = pd.read_csv('data/data_ellsberg.csv')"
+    "#paradox = 'ellsberg'\n",
+    "paradox = 'allais'\n",
+    "df = pd.read_csv(f'data/data_{paradox}.csv')"
    ]
   },
   {
@@ -70,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report_basename = 'ellsberg_decision_tree'\n",
+    "report_basename = f'{paradox}_decision_tree'\n",
     "\n",
     "report_dot = f'{report_basename}.dot'\n",
     "export_graphviz(dt, feature_names=feature_cols, class_names=['nonDAA', 'DAA'], label='all', rounded=True, filled=True, out_file=report_dot)\n",
