Adjust model of models to Allais

--- a/model_of_models.ipynb
+++ b/model_of_models.ipynb
@@ -20,7 +20,10 @@
     "from kmeans import KMeans\n",
     "from kmeans_printer import print_per_game_kmeans\n",
     "\n",
-    "df = pd.read_csv('data/data_ellsberg.csv')\n",
+    "#paradox = 'ellsberg'\n",
+    "paradox = 'allais'\n",
+    "df = pd.read_csv(f'data/data_{paradox}.csv')\n",
+    "\n",
     "df = df[PERSONALITY_FEATURES + EMOTIONS_FEATURES + [DAA]]"
    ]
   },
@@ -360,7 +363,7 @@
    "source": [
     "import subprocess\n",
     "\n",
-    "report_basename = 'ellsberg_emotion_decision_tree'\n",
+    "report_basename = f'{paradox}_model_of_models'\n",
     "\n",
     "report_dot = f'{report_basename}.{random_state}.dot'\n",
     "with open(report_dot, 'w') as fout:\n",
